renamed shared to public in gui only

--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -20,7 +20,7 @@
   </p>
   <p>
     <%= f.check_box :shared %>
-    <%= f.label :shared %><br />
+    <%= f.label :shared, "Public" %><br />
   </p>
   <p>
     <%= f.label :tags %><br/>
