--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -23,7 +23,7 @@
 
    <p>
      <%= f.check_box :shared %>
-     <%= f.label :shared %><br />
+     <%= f.label :shared, "Public" %><br />
    </p>
    <p>
      <%= f.label :tags %><br/>
