--- a/app/views/month/listing.html.erb
+++ b/app/views/month/listing.html.erb
@@ -6,7 +6,7 @@
 <% form_tag 'listing', :method => 'get', :id => 'listing_form' do %>
 
     <p>
-    <label for="date">Period(testing)</label>
+    <label for="date">Period</label>
     <%= date_select "calender", "date", {:start_year => Date.today.year - 5 , :end_year => Date.today.year + 1, :discard_day => true} %>
   </p>
 
