--- a/app/views/holidays/vacation.html.erb
+++ b/app/views/holidays/vacation.html.erb
@@ -1,15 +1,17 @@
 
 <%## TODO: Hack find vacation through configuration %>
-      <% activity = Activity.find_by_name("Vacation") %>
+<% activity = Activity.find_by_name("Vacation") %>
 
+<p class="notice"><%= flash[:notice] %></p>
+<p class="error"><%= flash[:error] %></p>
 
 <h1>Vacation</h1>
 <%= render :partial => 'sub_menu' -%>
 
 <div id="navigation" style="text-align:center;">
-<h3><%= link_to '<<', :action => 'vacation', :date => @day << 1 %>
+<h4><%= link_to '<<', :action => 'vacation', :date => @day << 1 %>
 <span style="display:inline-block; width:9em;"><%= @day.strftime('%B %Y') %></span>
-<%= link_to '>>', :action => 'vacation', :date => @day >> 1 %></h3>
+<%= link_to '>>', :action => 'vacation', :date => @day >> 1 %></h4>
 </div>
 
 <hr/><br/>
@@ -28,7 +30,13 @@
     <% form_tag 'set_vacation', :method => 'post', :id => 'holidays_select_form' do %>
       <% vacation_dates = TimeEntry.for_user(@user).for_activity(activity).between(@day.at_beginning_of_month, @day.at_end_of_month).collect{|entry| entry.date} %>
       <% @day.at_beginning_of_month.upto @day.at_end_of_month do |d| %>
-        <td><%= check_box_tag  "date[#{d}]", '1',  vacation_dates.include?(d), :disabled => d.cwday >= 6 -%></td>
+        <td>
+          <% if  d.cwday >= 6  %>
+            <span class="disabled">&nbsp; -</span>
+          <% else %>
+            <%= check_box_tag  "date[#{d}]", '1',  vacation_dates.include?(d) -%>
+          <% end %>
+        </td>
       <% end %>
       <td>
         <%= hidden_field_tag 'month', @day %>
@@ -44,7 +52,13 @@
       <% vacation_dates = TimeEntry.for_user(user).for_activity(activity).between(@day.at_beginning_of_month, @day.at_end_of_month).collect{|entry| entry.date} %>
       <% @day.at_beginning_of_month.upto @day.at_end_of_month do |d| %>
 
-        <td><input type="checkbox" <%= ! vacation_dates.include?(d) ? '' : 'checked="1"' -%> disabled="true"/></td>
+        <td>
+          <% if vacation_dates.include?(d) %>
+            <input type="checkbox" checked="1" disabled="true"/>
+          <% else %>
+            <span class="disabled">&nbsp; -</span>
+          <% end %>
+        </td>
       <% end %>
     </tr>
   <% end %>
