Added customers and project with CRUDs

--- a/app/views/activities/_sub_menu.html.erb
+++ b/app/views/activities/_sub_menu.html.erb
@@ -1,5 +1,7 @@
 <div id="nav">
       <%= link_to "Activities", activities_url %> |
+      <%= link_to "Projects", projects_url %> |
+      <%= link_to "Customers", customers_url %> |
       <%= link_to "Tags", tags_url %> |
       <%= link_to "Categories", tag_types_url %>   
 </div>
