Implemented creating and editing time entries via javascript (everything in one page without refresh). Working but lacks automated tests.

--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -7,5 +7,17 @@
 </p>
 
 <p>
-	<%= link_to "New entry", new_user_time_entry_path(@current_user) %>
+	<% UserWorkWeek::DAYNAMES.each_with_index do |day, index| %>
+		<div id="<%= day %>">
+			<p>
+				<b><%= "#{day} (#{@date.+(index)})" %></b> Total: <span id='<%= "#{day}_total" %>'><%= @week.day_total(index) %></span>
+				   <%= link_to_remote("New", :update => "#{day}", :position => :bottom, :with => "'date=#{@date.+(index)}&day=#{day}'", :url => { :action => :new }) %>   	    	
+			</p>
+			<p>  
+				<% @week.entries_for_day(index).each do |te| %>
+					<%= render :partial => "time_entry", :object => te %>
+				<% end -%>
+			</p>
+		</div>
+	<% end -%>
 </p>
