added project entry to activity and some testing

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -4,6 +4,12 @@
   <%= @activity.description %>
 </p>
 
+
+<p>
+   <b>Project:</b>
+     <%= @activity.project ? @activity.project.name : 'none' %>
+</p>
+
 <p>
   <b>Public:</b>
   <%= @activity.shared %>
