--- a/app/views/reports/hours.html.erb
+++ b/app/views/reports/hours.html.erb
@@ -1,15 +1,19 @@
-<h1>Hours Report</h1>
+<h1>Billing Report</h1>
 
 <%= render :partial => 'sub_menu' -%>
 
 <p class="error"><%= flash[:error] %></p>
 <p class="notice"><%= flash[:notice] %></p>
 
+<hr/>
+
 <div id="hours_filter">
-  <%= render :partial => 'hours_form', :locals => { :params => params, :tag_type => @tag_type, :years => @years, :months => @months } -%>
+  <% unless params[:type] == "advanced" %>
+    <%= render :partial => 'hours_form', :locals => { :params => params, :years => @years, :months => @months } -%>
+  <% else %>
+    <%= render :partial => 'hours_advanced_form', :locals => { :params => params, :tag_type => @tag_type, :customer => @customer, :years => @years, :months => @months } -%>
+  <% end %>
 </div>
-
-
 
 <hr/>
 
