--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -23,6 +23,11 @@ padding-top:5px;
     padding-right:20px;
 }
 
+
+div#hours_form select{
+  width: 100px;
+}
+
 ul.reports{
 		list-style: none;
 		font-size: 18px;
@@ -42,6 +47,7 @@ td.report a:hover{
 
 table tbody tr td, table tbody tr th  {
         padding-right: 10px;
+        vertical-align:top;
 }
 
 table.compact tbody tr td, table.compact tbody tr th  {
