--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -11,12 +11,16 @@
 		<div id="<%= day %>">
 			<p>
 				<b><%= "#{day} (#{@date.+(index)})" %></b> Total: <span id='<%= "#{day}_total" %>'><%= @week.day_total(index) %></span>
-				   <%= link_to_remote("New", :update => "#{day}", :position => :bottom, :with => "'date=#{@date.+(index)}&day=#{day}'", :url => { :action => :new }) %>   	    	
+				   <%= link_to_remote("New", { :update => "#{day}", :position => :bottom,  
+					  :url => { :action => :new, :user_id => @user.id, :date => @date.+(index), :day => day }, :method => :get }, 
+					  :href => new_user_time_entry_path(@user, :date => @date.+(index))) %>   	    	
 			</p>
-			<p>  
-				<% @week.entries_for_day(index).each do |te| %>
-					<%= render :partial => "time_entry", :object => te %>
-				<% end -%>
+			<p> 
+				<div id='<%= "#{day}_time_entries" %>'> 
+					<% @week.entries_for_day(index).each do |te| %>
+						<%= render :partial => "time_entry", :object => te %>
+					<% end -%>
+				</div>
 			</p>
 		</div>
 	<% end -%>
