--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -25,3 +25,12 @@
 		</div>
 	<% end -%>
 </p>
+<p>
+	<% if @current_user.admin -%>
+		<% form_tag "/time_entries/change_user" do %>
+			<%= hidden_field_tag :user_id, @user.id %>
+			<%= select_tag "new_user_id", options_from_collection_for_select(User.all, :id, :fullname) %>
+			<%= submit_tag "View for selected user" %>
+		<% end -%>
+	<% end -%>
+</p>
