--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -10,7 +10,7 @@
 	<% UserWorkWeek::DAYNAMES.each_with_index do |day, index| %>
 		<div id="<%= day %>">
 			<p>
-				<b><%= "#{day} (#{@date.+(index)})" %></b> Total: <span id='<%= "#{day}_total" %>'><%= @week.day_total(index) %></span>
+				<b><%= "#{day} (#{@date.+(index)})" %></b> Total: <span id='<%= "#{day}_total" %>'><b><%= @week.day_total(index) %></b></span>
 				   <%= link_to_remote("New", { :update => "#{day}", :position => :bottom,  
 					  :url => { :action => :new, :user_id => @user.id, :date => @date.+(index), :day => day }, :method => :get }, 
 					  :href => new_user_time_entry_path(@user, :date => @date.+(index))) %>   	    	
