--- a/app/views/time_entries/_edit_form.html.erb
+++ b/app/views/time_entries/_edit_form.html.erb
@@ -9,5 +9,5 @@
 	<%= button_to_function "Cancel" do |page|
 		page.replace "show_#{@time_entry.id}", :partial => "time_entry", :object => @time_entry
 	end	%>
-	<div id="error_messages"></div>
+	<div id='<%= "#{@time_entry.id}_error_messages" %>'></div>
 <% end -%>
