--- a/app/views/reports/_sub_menu.html.erb
+++ b/app/views/reports/_sub_menu.html.erb
@@ -1,5 +1,5 @@
 <p>
-<%=  link_to "Hours report", :action => 'hours' %> |
+<%=  link_to "Billing report", :action => 'billing' %> |
 <%=  link_to "Summary report", :action => 'summary' %> |
 <%=  link_to "User report", :action => 'user' %>
 </p>
