--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -5,6 +5,8 @@
  <p class="notice"><%= flash[:notice] %></p>
  <p class="error"><%= flash[:error] %></p>
 
+<%= will_paginate @customers %>
+
 <table>
   <tr>
     <th>Name</th>
