--- a/app/views/reports/_search_content.erb
+++ b/app/views/reports/_search_content.erb
@@ -17,6 +17,6 @@
   <% end %>
   </td></tr></table>
 
-<%= render :partial => 'download', :locals => { :params => params, :action => 'billing' } -%>
+<%= render :partial => 'download', :locals => { :params => params, :action => 'search' } -%>
 
 <% end %>
