--- a/app/views/reports/_sub_menu.html.erb
+++ b/app/views/reports/_sub_menu.html.erb
@@ -1,5 +1,7 @@
 <p>
-<%=  link_to "Billing report", :action => 'billing' %> |
-<%=  link_to "Summary report", :action => 'summary' %> |
-<%=  link_to "User report", :action => 'user' %>
+<%=  link_to "Billing", :action => 'billing' %> |
+<%=  link_to "Search", :action => 'search' %> |
+
+<%=  link_to "Summary", :action => 'summary' %> |
+<%=  link_to "User overview", :action => 'user' %>
 </p>
