--- a/app/views/reports/billing.html.erb
+++ b/app/views/reports/billing.html.erb
@@ -5,21 +5,64 @@
 <p class="error"><%= flash[:error] %></p>
 <p class="notice"><%= flash[:notice] %></p>
 
-<hr/>
+<br/>
 
-<div id="billing_filter">
-  <% unless params[:type] == "advanced" %>
-    <%= render :partial => 'billing_form', :locals => { :params => params, :years => @years, :months => @months } -%>
-    <%= observe_form 'billing_form',
-      :url => {:action => 'update_billing_content'},
-      :update => 'billing_content' %>
-  <% else %>
-    <%= render :partial => 'billing_advanced_form', :locals => { :params => params, :tag_type => @tag_type, :customer => @customer, :years => @years, :months => @months } -%>
-  <% end %>
-</div>
+<% form_tag 'billing', :method => 'get', :id => 'billing_form' do %>
+  <div>
+    <table>
+      <tr>
+        <td><%= select_tag "year", options_for_select(@years, params[:year].to_i) %></td>
+
+        <td><%= select_tag "month", options_from_collection_for_select( @months, 'first', 'last', params[:month] ? params[:month].to_i : @day.month  ) %></td>
+
+        <td><%= submit_tag "View" %></td>
+    </table>
+  </div>
+<% end -%>
 
 <hr/>
 
 <div id="billing_content">
-  <%= render :partial => 'billing_content', :locals => { :table => @table} %>
+  <% form_tag 'billing', :method => 'get', :id => 'billing_workflow' do %>
+    <table>
+      <% Customer.all.each do |customer| %>
+        <tr>
+          <td> <b><%= customer.name %></b></td>
+        </tr>
+        <% customer.projects.each do |project| %>
+          <% total= TimeEntry.between(@day,@day.at_end_of_month).for_project(project).sum(:hours) %>
+          <% if total == 0 %>
+            <tr>
+              <td><%= check_box_tag  "", nil, nil, :disabled => true -%> <b class="grayed"><%= project.name %></b></td>
+            </tr>
+          <% else %>
+            <tr>
+              <td><%= check_box_tag  "project[#{project.id}]" -%> <b><%= project.name %></b></td>
+            </tr>
+
+            <% User.all.each do |user| %>
+              <% hours = TimeEntry.between(@day,@day.at_end_of_month).for_project(project).for_user(user).sum(:hours) %>
+              <% if hours > 0 %>
+                <tr>
+                  <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= user.fullname%> </td>
+                  <td> normaltid</td>
+                  <td><%= hours %> t </td>
+                  <td><%= link_to "Details", :action => 'details', :project => project, :user => user, :day => @day %></td>
+                </tr>
+              <% end %>
+            
+          <% end %>
+          <tr>
+            <td></td><td><b>total</b></td><td><b><%= total %> t</b></td>
+          </tr>
+        <% end %>
+      <% end %>
+      <% end %>
+    </table>
+    <br/>
+    <%= hidden_field_tag 'format',  "pdf" %>
+    <%= submit_tag "Generate report (PDF)" %>
+  <% end -%>
 </div>
+
+<%= render :partial => 'download', :locals => { :params => params, :action => 'billing' } -%>
