--- a/app/views/reports/billing.html.erb
+++ b/app/views/reports/billing.html.erb
@@ -11,9 +11,9 @@
   <div>
     <table>
       <tr>
-        <td><%= select_tag "year", options_for_select(@years, params[:year].to_i) %></td>
 
         <td><%= select_tag "month", options_from_collection_for_select( @months, 'first', 'last', params[:month] ? params[:month].to_i : @day.month  ) %></td>
+        <td><%= select_tag "year", options_for_select(@years, params[:year].to_i) %></td>
 
         <td><%= submit_tag "View" %></td>
     </table>
@@ -23,14 +23,14 @@
 <hr/>
 
 <div id="billing_content">
-  <% form_tag 'billing', :method => 'get', :id => 'billing_workflow' do %>
+  <% form_tag 'billing_report', :method => 'get', :id => 'billing_workflow' do %>
     <table>
       <% Customer.all.each do |customer| %>
         <tr>
           <td> <b><%= customer.name %></b></td>
         </tr>
         <% customer.projects.each do |project| %>
-          <% total= TimeEntry.between(@day,@day.at_end_of_month).for_project(project).sum(:hours) %>
+          <% total= TimeEntry.billed(false).between(@day,@day.at_end_of_month).for_project(project).sum(:hours) %>
           <% if total == 0 %>
             <tr>
               <td><%= check_box_tag  "", nil, nil, :disabled => true -%> <b class="grayed"><%= project.name %></b></td>
@@ -41,7 +41,7 @@
             </tr>
 
             <% User.all.each do |user| %>
-              <% hours = TimeEntry.between(@day,@day.at_end_of_month).for_project(project).for_user(user).sum(:hours) %>
+              <% hours = TimeEntry.billed(false).between(@day,@day.at_end_of_month).for_project(project).for_user(user).sum(:hours) %>
               <% if hours > 0 %>
                 <tr>
                   <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= user.fullname%> </td>
@@ -50,19 +50,24 @@
                   <td><%= link_to "Details", :action => 'details', :project => project, :user => user, :day => @day %></td>
                 </tr>
               <% end %>
-            
+
+            <% end %>
+            <tr>
+              <td></td><td><b>total</b></td><td><b><%= total %> t</b></td>
+            </tr>
           <% end %>
-          <tr>
-            <td></td><td><b>total</b></td><td><b><%= total %> t</b></td>
-          </tr>
         <% end %>
-      <% end %>
       <% end %>
     </table>
     <br/>
+    <hr/>
     <%= hidden_field_tag 'year',  params[:year] %>
     <%= hidden_field_tag 'month',  params[:month] %>
     <%= hidden_field_tag 'format',  "pdf" %>
-    <%= submit_tag "Generate report (PDF)" %>
+    <%= submit_tag "Lock data", :name => 'lock' %>
+    <%= submit_tag "Report (PDF)", :name => 'report' %>
+    <%= submit_tag "Report + Mark as billed", :name => 'bill' %>
   <% end -%>
+
+</td></tr></table>
 </div>
