Implemented crud for hour types. Created new admin space for user, hour type and activity views.

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Activities</h1>
-<%= render :partial => 'sub_menu', :locals => { :tag_types => @tag_types } -%>
+<%= render :partial => "admin/menu" %>
 
 <p class="error"><%= flash[:error] %></p>
 <p class="notice"><%= flash[:notice] %></p>
