--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,8 @@
 					<span class="menu_item"><%= link_to "Review", month_url, :class => "menu_link" %></span>
 					<% if @current_user.admin -%>
 						<span class="menu_item"><%= link_to "Reports", reports_url, :class => "menu_link" %></span>
-						<span class="menu_item"><%= link_to "Activities", activities_url, :class => "menu_link" %></span>
-                                                
-						<span class="menu_item"><%= link_to "Users", users_url, :class => "menu_link" %></span> 
+						<span class="menu_item"><%= link_to "Activities", activities_url, :class => "menu_link" %></span>                                                
+						<span class="menu_item"><%= link_to "Admin", users_url, :class => "menu_link" %></span> 
 					<% end -%>
                                         <span class="menu_item"><%= link_to "Holidays", {:controller => :holidays}, :class => "menu_link" %></span>
 					<span class="menu_item"><%= link_to "Logout", {:controller => "user_sessions", :action => "destroy"}, :method => :delete, :class => "menu_link" %></span>
