--- a/app/views/time_entries/new.html.erb
+++ b/app/views/time_entries/new.html.erb
@@ -6,6 +6,8 @@
 		<%= collection_select(:time_entry, :activity_id, @activities, :id, :name) %>
 	</p>
 	<p>
+    <%= f.label :hour_type %>
+	<%= collection_select(:time_entry, :hour_type_id, HourType.all(:order => "default_hour_type DESC"), :id, :name) %>
 	<%= f.label :hours %>
 	<%= f.text_field :hours, :size => 6 %>
 	<%= f.label :notes %>
